@startuml

skinparam classAttributeIconSize 0
/'hide empty methods
hide empty attributes'/


class RecordSamplesUI {}

class RecordSamplesController {
+getTestsNoSamples()
+createSample()
+addSample(code)
+getBarcode()
+saveImageBarcode(code)
+addSampleCollectionDateToTest()
}

class Company {
-designation
+getTestStore()
+getSampleStore()
}

class TestStore {
+getTestByCodeInTestList()
}

class TestMapper {
+List<TestDto> toDTO(List<Test> tests)
+TestDto toDTO(Test t)
}

class TestDto {
- code
- nhsCode
+TestDto(code, nhsCode, client, testType, parameters, samples)
+getCode()
}

class Test {
- code
- nhsCode
- dateOfTestRegistration
- dateOfChemicalAnalysis
- dateOfDiagnosis
+Test(nhsCode, client, testType, parameters)
+getCode()
+getNhsCode()
+getSamples()
+getClient()
+getTestType()
+getParameters()
+addSample(sample)
+addSampleCollectionDate()
+generateNowDateAndTime()
+hasSamples()
}

class Sample {
-myBarcode
+Sample(myBarcode)
+getMyBarcode()
+equals(otherObject)
}

class SampleStore {
+createSample(myBarcode)
+validateSample(sample)
}

class Barcode {}

class MyBarcode {
- barcodeNumber
+MyBarcode(barcode, barcodeNumber)
+MyBarcode(Mybarcode otherMyBarcode)
+getBarcode()
+getBarcodeNumber()
+equals(otherObject)
}

interface ExternalAPI <<interface>> {
+MyBarcode getBarcode(barcodeNumber)
+saveImageBarcode(myBarcode, code)
}

class BarbecueAdapter {
+MyBarcode getBarcode(barcodeNumber)
+saveImageBarcode(myBarcode, code)
}

class BarbecueAPI{
+Barcode createUPCA(data)
+BufferedImage saveJPEG(barcode, file)
}

class ClinicalAnalysisLaboratory {
-laboratoryID : String
+ClinicalAnalysisLaboratory(laboratoryID, name, address, phoneNumber, numTIN, selectedTT)
+getLaboratoryID()
+getSelectedTT()
+getCalTestList()
}

class BarcodeUtils{
+generateBarcodeNumber()
+File imageFolderPath(code)
}

class ClinicalAnalysisLaboratoryStore {
+getTestsWithNoSamples(laboratoryID)
+getCalByLaboratoryID(laboratoryID)
}

class Laboratory {
-name
-address
-phoneNumber
-numTIN
+Laboratory(name, address, phoneNumber, numTIN)
+getName()
+getAddress()
+getPhoneNumber()
+getNumTIN()
}


RecordSamplesUI ..> RecordSamplesController
RecordSamplesUI ..> TestDto
RecordSamplesController ..> TestMapper
RecordSamplesController ..> TestStore
RecordSamplesController ..> SampleStore
RecordSamplesController ..> Company
RecordSamplesController ..> Test
RecordSamplesController ..> Barcode
RecordSamplesController ..> MyBarcode
RecordSamplesController ..> ExternalAPI
RecordSamplesController ..> BarcodeUtils
RecordSamplesController ..> ClinicalAnalysisLaboratoryStore
TestMapper ..> Test
TestMapper ..> TestDto
RecordSamplesController ..> Sample
Company "1" --> "1" SampleStore : uses >
Company "1" --> "1" ClinicalAnalysisLaboratoryStore : uses >
ClinicalAnalysisLaboratoryStore "1" -- "3..*" ClinicalAnalysisLaboratory : owns >
SampleStore "1" -- "*" Sample : manages >
TestStore "1" -- "*" Test : conducts >
Company "1" --> "1" TestStore : uses >
Sample "1" - "1" MyBarcode : identified with >
MyBarcode "1" -- "1" Barcode : has >
Barcode "*" -- "1" ExternalAPI : generated by >
Company "*" -- "1" ExternalAPI : makes use of >
MyBarcode "1" -- "1" BarbecueAdapter : given by >



class BarbecueAdapter implements ExternalAPI

BarbecueAdapter --> BarbecueAPI

ClinicalAnalysisLaboratory <|-- Laboratory






@enduml